tests/invalid/Assign_Invalid_6.whiley
import * from whiley.lang.*

function f(bool x) -> int:
    return !x
